--- a/src/layouts/index.styl
+++ b/src/layouts/index.styl
@@ -6,6 +6,7 @@ focus
 
 body
   font-family lato, 'helvetica neue', helvetica, sans-serif
+  overflow-x hidden
 
 a
   color initial
